--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 altair==4.2.2
 attrs==22.2.0
+beautifulsoup4==4.12.2
 blinker==1.6.2
 cachetools==5.3.0
 certifi==2022.12.7
@@ -34,6 +35,7 @@ requests==2.28.2
 rich==13.3.4
 six==1.16.0
 smmap==5.0.0
+soupsieve==2.4
 streamlit==1.21.0
 tenacity==8.2.2
 toml==0.10.2
