--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,19 @@ altair==4.2.2
 attrs==22.2.0
 beautifulsoup4==4.12.2
 blinker==1.6.2
+Brotli==1.0.9
 cachetools==5.3.0
 certifi==2022.12.7
+cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
+cssselect2==0.7.0
 decorator==5.1.1
 entrypoints==0.4
+fonttools==4.39.3
 gitdb==4.0.10
 GitPython==3.1.31
+html5lib==1.1
 idna==3.4
 importlib-metadata==6.3.0
 Jinja2==3.1.2
@@ -24,9 +29,12 @@ Pillow==9.5.0
 plotly==5.14.1
 protobuf==3.20.3
 pyarrow==11.0.0
+pycparser==2.21
 pydeck==0.8.0
+pydyf==0.6.0
 Pygments==2.15.0
 Pympler==1.0.1
+pyphen==0.14.0
 pyrsistent==0.19.3
 python-dateutil==2.8.2
 pytz==2023.3
@@ -38,6 +46,7 @@ smmap==5.0.0
 soupsieve==2.4
 streamlit==1.21.0
 tenacity==8.2.2
+tinycss2==1.2.1
 toml==0.10.2
 toolz==0.12.0
 tornado==6.2
@@ -46,4 +55,6 @@ tzdata==2023.3
 tzlocal==4.3
 urllib3==1.26.15
 validators==0.20.0
+webencodings==0.5.1
 zipp==3.15.0
+zopfli==0.2.2
